# GitGood

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ghflow/: __main__.py  app.py
src/ghflow/core/: __init__.py  repository.py
src/ghflow/lessons/: loader.py
src/ghflow/lessons/data/: 01_branching.yaml  05_code_review.yaml  06_merging.yaml
src/ghflow/parser/: commands.py  lexer.py
src/ghflow/ui/: console.py  panels.py  prompt.py  tree_view.py
src/gitgood/: __init__.py  __main__.py  app.py
src/gitgood/core/: github_api.py  models.py
src/gitgood/lessons/: __init__.py  engine.py
src/gitgood/lessons/data/: 02_commits.yaml  03_pushing.yaml  04_pull_requests.yaml  05_code_review.yaml  06_merging.yaml
src/gitgood/parser/: __init__.py  executor.py
src/gitgood/ui/: __init__.py  console.py  panels.py  prompt.py  regions.py  tree_view.py
tests/: __init__.py
